# siem-project

./: .gitignore  README.md  gcp_src.py  pipeline.py  pyproject.toml  schema.py
tests/: test_gcp.py
