[project]
name = "siem-ingest"
version = "0.1.0"
description = "SIEM log ingestion pipeline project"
authors = [
    {name = "Vincent Kelly",email = "vinkelly99@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "google-cloud-logging (>=3.16.0,<4.0.0)",
    "pydantic (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "ruff (>=0.15.20,<0.16.0)"
]
